# django-bs

./: CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: main.yml
django-bs4/templates/bs4/: field.html  pagination.html
django-bs4/templates/django/forms/widgets/: checkbox_option.html  clearable_file_input.html  radio_option.html
django-bs4/templatetags/: bootstrap4.py
django_bs/: __init__.py
django_bs/templates/bs/: field.html  form.html  messages.html  pagination.html
django_bs/templates/django/forms/: default.html  div.html  field.html
django_bs/templates/django/forms/widgets/: checkbox.html  input.html  multiwidget.html  select.html  textarea.html
django_bs/templatetags/: bootstrap.py
django_bs4/templates/bs4/: field.html
django_bs4/templatetags/: bootstrap4.py
django_bs5/: __init__.py
django_bs5/templates/bs5/: field.html  form.html  messages.html  pagination.html
django_bs5/templates/django/forms/widgets/: clearable_file_input.html  multiwidget.html
django_bs5/templatetags/: bootstrap5.py
example/: forms.py  manage.py  settings.py  urls.py  views.py
example/templates/: form.html
