[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-bs"
version = "5.2.0"
description = "simple bootstrap support for django"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tobias Bengfort", email = "tobias.bengfort@posteo.de"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Environment :: Web Environment",
    "Framework :: Django",
]

[project.urls]
Homepage = "https://github.com/xi/django-bs"

[tool.setuptools]
packages = ["django_bs"]

[tool.setuptools.package-data]
django_bs = [
    "templates/**/*.html",
]
