[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-bs"
version = "5.3.0"
description = "simple bootstrap support for django"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Tobias Bengfort", email = "tobias.bengfort@posteo.de"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "Framework :: Django",
]

[project.urls]
Homepage = "https://github.com/xi/django-bs"

[tool.setuptools.packages.find]
include = ["django_bs*"]

[tool.setuptools.package-data]
django_bs = [
    "templates/**/*.html",
]
